# chessmate-2350

./: .gitignore  CMakeLists.txt  README.md
source/: bitboard.h  bitboard_func.c  bitboard_func.h  board.c  board.h  engine.c  main.c  util.c
